[package]
name = "fast_partition"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
bio = "2"  # Use the latest 2.x version
flate2 = "1.0"
zstd = "0.11"
tar = "0.4"
crossbeam-channel = "0.5"
num_cpus = "1.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1


